@@ -22,6 +22,7 @@
 #include "kotextdocument.h"
 #include "kozoomhandler.h"
 #include "kohyphen/kohyphen.h"
+#include "koparagcounter.h"
 
 #include <kdebug.h>
 
@@ -128,6 +129,11 @@ bool KoTextFormatterCore::format()
     x = left;
     if ( doc && !rtl )
         x += parag->firstLineMargin();
+    // Add the width of the paragraph counter - first line of parag only.
+    if( parag->counter() && !rtl &&
+    	(( parag->counter()->alignment() == Qt::AlignLeft ) || ( parag->counter()->alignment() == Qt::AlignAuto )))
+        x += parag->counterWidth(); // in LU pixels
+
     int curLeft = left;
     y = doc && doc->addMargins() ? parag->topMargin() : 0;
     // #57555, top margin doesn't apply if parag at top of page
